@@ -1,6 +1,6 @@
-Date: 2021-05-12
+Date: 2021-05-17
 Package: CHNOSZ
-Version: 1.4.1-4
+Version: 1.4.1-5
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
