@@ -700,6 +700,10 @@ Rh(SO4)2-,Rh(SO4)2-,Rh(SO4)2-,aq,SS98a,NA,1995-03-30,cal,-306100,-375600,1.4,-59
 Rh(SO4)3-3,Rh(SO4)3-3,Rh(SO4)3-3,aq,SS98a,NA,1995-03-30,cal,-483700,-583100,37.9,-73.3,37.5,8.3237,12.5416,0.8232,-3.2974,2.2248,-17.9739,4.2376,-3
 RhOH+2,Rh(OH)+2,Rh(OH)+2,aq,SS98a,NA,1995-07-13,cal,-820,-14620,-32.5,-0.1,-0.3,2.247,-2.2946,6.6503,-2.684,20.365,-3.0549,1.5475,2
 RhO+,RhO+,RhO+,aq,SS98a,NA,1994-07-25,cal,3140,-10010,-18.7,-39.5,1.9,2.3067,-2.1515,6.6002,-2.69,-9.3049,-11.0806,0.8334,1
+Ar,Ar,Ar,aq,PS01,NA,2000-10-04,cal,3890,-2880,14.3,52.82,32.6,11.71,-2.39,-44.93,1.91,27.96,9.56,-0.46,0
+Xe,Xe,Xe,aq,PS01,NA,2000-10-04,cal,3215,-4540,14.5,64.77,42.5,18.4,-2.39,-59.03,1.43,35.85,13.86,-0.39,0
+CH4,NA,CH4,aq,PS01,NA,2000-10-04,cal,-8140,-20930,21,60.23,36,17.69,-15.3,-67.88,11.47,40.87,6.45,-0.4,0
+CO2,NA,CO2,aq,PS01,NA,2005-08-18,cal,-92250,-98900,28.1,51.86,33.5,15.2964,-10.0382,-55.4493,7.4092,36.8069,3.5851,-0.3107,0
 CF4,NA,CF4,aq,SSW01,NA,2006-09-01,cal,-202700,-224680,32.4,105.4,0,0,0,0,0,51.2936,28.0572,-0.3282,0
 SF6,NA,SF6,aq,SSW01,NA,2006-09-01,cal,-259240,-293780,37.2,146.4,0,0,0,0,0,61.295,40.7143,-0.2601,0
 NF3,NA,NF3,aq,SSW01,NA,2006-09-01,cal,-15660,-33515,35.7,82.8,0,0,0,0,0,43.4774,18.2721,-0.2406,0
